# pipetree

./: .dockerignore  .gitignore  LICENSE  Pipfile  README.md  fly.toml  pyproject.toml
examples/pdf_ingestion/: .env.example  .gitignore  Pipfile  README.md  capabilities.py  config.py  context.py  main.py  progress.csv  pyproject.toml  watch.py
examples/pdf_ingestion/benchmarks/: __init__.py  conftest.py  extractors.py  test_text_extraction.py  workers.py
examples/pdf_ingestion/boundary/: __init__.py  cli.py
examples/pdf_ingestion/infra/: progress.py
examples/pdf_ingestion/lib/: __init__.py  pipeline.py
examples/pdf_ingestion/lib/steps/: __init__.py  categorize.py  category_router.py  load_pdf.py  parts_type_router.py  process_electrical.py  process_ops.py  save_text.py
examples/pdf_ingestion/pdf_ingestion/: __init__.py  capabilities.py  context.py  main.py  main_dsl.py  watch.py
examples/pdf_ingestion/pdf_ingestion/steps/: __init__.py  categorize.py  category_router.py  extract_text.py  load_pdf.py  parts_type_router.py  process_electrical.py  process_mechanical.py  process_ops.py  process_parts.py  save_text.py
examples/pdf_ingestion/steps/: __init__.py  categorize.py  category_router.py  chunk_text.py  extract_pages.py  extract_text.py  load_pdf.py  parts_type_router.py  process_mechanical.py  process_parts.py
examples/pdf_ingestion/tests/: __init__.py  test_pipeline.py
examples/stress_test/: Pipfile  pyproject.toml
examples/stress_test/stress_test/: __init__.py  capabilities.py  context.py  main.py
examples/stress_test/stress_test/steps/: __init__.py  branches.py  stages.py
pipetree/: .coverage  Pipfile  __init__.py  benchmark.py  checkpoint.py  pyproject.toml  registry.py  step.py
pipetree/benchmarking/: fixture.py
pipetree/domain/: __init__.py
pipetree/domain/capability/: predefined.py
pipetree/domain/pipeline/: pipeline.py
pipetree/domain/step/: __init__.py  base_router.py  base_step.py  router.py  step.py
pipetree/domain/types/: concurrency_config.py  context.py
pipetree/infrastructure/: __init__.py
pipetree/infrastructure/checkpoint/: file_checkpoint_store.py
pipetree/infrastructure/progress/: __init__.py  file_progress_notifier.py  null_progress_notifier.py  progress_notifier.py  sqlite_progress_notifier.py
pipetree/pipetree/: __init__.py  capability.py  dsl.py  pipeline.py  types.py
pipetree/pipetree/benchmarking/: __init__.py  bench_result.py  bench_runner.py  judges.py  metrics.py
pipetree/pipetree/domain/: __init__.py
pipetree/pipetree/domain/capability/: __init__.py  capability.py
pipetree/pipetree/domain/pipeline/: __init__.py  contract_violation_error.py  pipeline.py
pipetree/pipetree/domain/step/: __init__.py  router.py
pipetree/pipetree/domain/types/: __init__.py  chunk.py  context.py  vec_record.py
pipetree/pipetree/dsl/: __init__.py  branch_decorator.py  branch_target.py  builder.py  decorators.py  markers.py  route_marker.py  step_decorator.py
pipetree/pipetree/infrastructure/: __init__.py
pipetree/pipetree/infrastructure/checkpoint/: __init__.py  checkpoint_store.py  in_memory_checkpoint_store.py
pipetree/pipetree/infrastructure/progress/: __init__.py  handler.py  (+9 more)
pipetree/tests/: __init__.py  conftest.py  fixtures.py  test_bench_runner_integration.py  test_benchmark.py  test_benchmark_full_coverage.py  test_benchmark_store.py  test_capability.py  test_context_coverage.py  test_context_methods.py  test_coverage_extras.py  test_defensive_code.py  test_dsl.py  test_dsl_builder_coverage.py  test_dsl_routing.py  test_edge_cases.py  test_error_handling.py  test_full_coverage.py  test_handler.py  test_parallel_extraction.py  test_pipeline.py  test_pipeline_coverage.py  test_pipeline_helpers.py  test_pipeline_notifier.py  test_pipeline_notifier_coverage.py  test_progress_notifier.py  test_reexports.py  test_registry.py  test_remaining_coverage.py  test_router_advanced.py  test_router_coverage.py  test_sqlite_progress_notifier.py  test_step.py  test_watcher.py
visualizer/: .coveragerc  .env.example  Dockerfile  Pipfile  app.py  config.py  databases.json  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  routes.py  ruff.toml  tailwind.config.js
visualizer/boundary/: __init__.py
visualizer/boundary/base/: __init__.py  http_context.py  templates.py
visualizer/infra/: __init__.py
visualizer/infra/db/: __init__.py  current-pulse  current-works  db.py
visualizer/infra/mailer/: __init__.py  error.py  mailer.py
visualizer/lib/: __init__.py  benchmarks.py  formatters.py  ingest.py  runs.py  sanitizers.py  steps.py  telemetry.py
visualizer/lib/ctx/: __init__.py
visualizer/lib/exceptions/: __init__.py  auth.py  identity.py  pipeline.py
visualizer/lib/security/: __init__.py  tokens.py
visualizer/templates/: base.html  index.html  run_detail.html
visualizer/templates/partials/: step_events.html  step_list.html  step_summary.html  steps.html
visualizer/tests/: __init__.py  conftest.py  test_admin.py  test_app.py  test_auth.py  test_benchmarks.py  test_formatters.py  test_ingest.py  test_runs.py  test_steps.py  test_telemetry.py
visualizer/tests/boundary/: test_formatters.py  test_http_context.py
visualizer/tests/lib/: test_benchmarks.py  test_formatters.py  test_runs.py  test_steps.py  test_telemetry.py
visualizer/visualizer/: __init__.py  app.py  config.py  routes.py
visualizer/visualizer/api/: __init__.py  auth.py  router.py  schemas.py
visualizer/visualizer/boundary/: __init__.py
visualizer/visualizer/controllers/: __init__.py  admin_controller.py  benchmarks_controller.py  login_controller.py  runs_controller.py  steps_controller.py  telemetry_controller.py
visualizer/visualizer/infra/: auth.py  context.py  mailer.py
visualizer/visualizer/lib/: __init__.py  admin.py  auth.py  benchmarks.py  db.py  formatters.py  ingest.py  runs.py  steps.py  telemetry.py
visualizer/visualizer/templates/: base.html  benchmark_detail.html  benchmarks.html  compare.html  index.html  login.html  login_verify.html  run_detail.html  run_telemetry.html  telemetry.html
(+141 files in other folders)
