[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipetree-io"
version = "0.1.0"
description = "Modular, benchmarkable ingestion framework for large PDFs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "O'Saasy License"}
authors = [
    {name = "Pipetree Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "typing-extensions>=4.0.0",
    "sqlmodel>=0.0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]
pdf = [
    "pypdf>=4.0.0",
]
http = [
    "httpx>=0.26.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "pipetree.infrastructure.progress.models.*"
strict = false
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = [
    "pipetree.infrastructure.progress.http_progress_notifier",
    "pipetree.infrastructure.progress.http_benchmark_store",
]
disable_error_code = ["import-not-found"]

[tool.coverage.run]
omit = [
    "pipetree/infrastructure/progress/http_progress_notifier.py",
    "pipetree/infrastructure/progress/http_benchmark_store.py",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF022", # __all__ not sorted (we use comments for organization)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["pipetree"]
