[project]
name = "stress-test"
version = "0.1.0"
description = "Stress test pipeline for testing the Pipetree visualizer with many steps"
requires-python = ">=3.11"
dependencies = [
    "pipetree",
]

[project.scripts]
stress-test = "stress_test.main:main"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF022", # __all__ not sorted (we use comments for organization)
]

[tool.ruff.lint.isort]
known-first-party = ["stress_test"]
